--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div class="bubblesort"></div>
-    <div class="bubblesort"></div>
+    <div class="shakersort"></div>
   </body>
 </html>
