--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <div class="bubblesort"></div>
     <div class="shakersort"></div>
+    <div class="mergesort"></div>
   </body>
 </html>
