add gnome sort and description of running sort individually

--- a/index.html
+++ b/index.html
@@ -10,5 +10,12 @@
     <div class="bubblesort"></div>
     <div class="shakersort"></div>
     <div class="mergesort"></div>
+    <div class="gnomesort"></div>
+
+    <!-- perform sort individually -->
+    <script src="./JS/individual.js" defer type="module"></script>
+    <div class="gnomesort-ind"></div>
+    <button id="shuffle">shuffle</button>
+    <button id="start">start</button>
   </body>
 </html>
