add timestamp to log and change directory tree

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="gnomesort"></div>
 
     <!-- perform sort individually -->
-    <script src="./JS/individual.js" defer type="module"></script>
+    <!-- <script src="./JS/individual.js" defer type="module"></script>
     <div class="gnomesort-ind"></div>
     <button id="shuffle">shuffle</button>
-    <button id="start">start</button>
+    <button id="start">start</button> -->
   </body>
 </html>
