--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="shakersort"></div>
     <div class="mergesort"></div>
     <div class="gnomesort"></div>
+    <div class="radixsort"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
