--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>my index</title>
   </head>
   <body>
-    <div class="bubblesort"></div>
+    <!-- <div class="bubblesort"></div>
     <div class="shakersort"></div>
     <div class="mergesort"></div>
     <div class="gnomesort"></div>
-    <div class="radixsort"></div>
+    <div class="radixsort"></div> -->
+    <div class="insertionsort"></div>
+    <div class="insertionsort-bin"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
