add selection sort

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <div class="mergesort"></div>
     <div class="gnomesort"></div>
     <div class="radixsort"></div> -->
-    <div class="insertionsort"></div>
-    <div class="insertionsort-bin"></div>
+    <!-- <div class="insertionsort"></div>
+    <div class="insertionsort-bin"></div> -->
+    <div class="selectionsort"></div>
+    <div class="selectionsort-double"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
