--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <div class="radixsort"></div> -->
     <!-- <div class="insertionsort"></div>
     <div class="insertionsort-bin"></div> -->
-    <div class="selectionsort"></div>
-    <div class="selectionsort-double"></div>
+    <!-- <div class="selectionsort"></div>
+    <div class="selectionsort-double"></div> -->
+    <div class="shellsort2"></div>
+    <div class="shellsort3"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
