--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
   </head>
   <body>
     <!-- <div class="bubblesort"></div>
-    <div class="shakersort"></div>
-    <div class="mergesort"></div>
-    <div class="gnomesort"></div>
-    <div class="radixsort"></div> -->
+    <div class="shakersort"></div> -->
+    <!-- <div class="gnomesort"></div> -->
+    <!-- <div class="mergesort"></div> -->
+    <!-- <div class="radixsort"></div> -->
     <!-- <div class="insertionsort"></div>
     <div class="insertionsort-bin"></div> -->
     <!-- <div class="selectionsort"></div>
     <div class="selectionsort-double"></div> -->
-    <div class="shellsort2"></div>
-    <div class="shellsort3"></div>
+    <!-- <div class="shellsort2"></div>
+    <div class="shellsort3"></div> -->
+    <div class="combsort"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
