--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div class="selectionsort-double"></div> -->
     <!-- <div class="shellsort2"></div>
     <div class="shellsort3"></div> -->
-    <div class="combsort"></div>
+    <!-- <div class="combsort"></div> -->
+    <div class="quicksort"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
