--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <div class="insertionsort-bin"></div>
     <div class="selectionsort"></div>
     <div class="selectionsort-double"></div> -->
-    <div class="shellsort2"></div>
+    <!-- <div class="shellsort2"></div> -->
     <!-- <div class="shellsort3"></div> -->
-    <div class="combsort"></div>
-    <div class="quicksort"></div>
-    <div class="circlesort"></div>
-    <div class="heapsort"></div>
+    <!-- <div class="combsort"></div> -->
+    <!-- <div class="quicksort"></div> -->
+    <!-- <div class="circlesort"></div> -->
+    <!-- <div class="heapsort"></div> -->
+    <div class="oddevensort"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
