--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <div class="quicksort"></div> -->
     <!-- <div class="circlesort"></div> -->
     <!-- <div class="heapsort"></div> -->
-    <div class="oddevensort"></div>
+    <!-- <div class="oddevensort"></div> -->
+    <div class="cyclesort"></div>
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
