--- a/index.html
+++ b/index.html
@@ -7,23 +7,25 @@
     <title>my index</title>
   </head>
   <body>
-    <!-- <div class="bubblesort"></div>
-    <div class="shakersort"></div> -->
-    <!-- <div class="gnomesort"></div>
-    <div class="mergesort"></div>
-    <div class="radixsort"></div>
-    <div class="insertionsort"></div>
-    <div class="insertionsort-bin"></div>
-    <div class="selectionsort"></div>
-    <div class="selectionsort-double"></div> -->
-    <!-- <div class="shellsort2"></div> -->
-    <!-- <div class="shellsort3"></div> -->
-    <!-- <div class="combsort"></div> -->
-    <!-- <div class="quicksort"></div> -->
-    <!-- <div class="circlesort"></div> -->
-    <!-- <div class="heapsort"></div> -->
+    <div class="bubblesort"></div>
+    <div class="shakersort"></div>
+    <div class="combsort"></div>
+    <!-- <div class="gnomesort"></div> -->
     <!-- <div class="oddevensort"></div> -->
-    <div class="cyclesort"></div>
+    <div class="mergesort"></div>
+    <!-- <div class="mergesort-para"></div> -->
+    <!-- <div class="radixsort"></div> -->
+    <div class="insertionsort"></div>
+    <!-- <div class="insertionsort-bin"></div> -->
+    <div class="selectionsort"></div>
+    <!-- <div class="selectionsort-double"></div> -->
+    <div class="shellsort2"></div>
+    <!-- <div class="shellsort3"></div> -->
+    <div class="quicksort"></div>
+    <!-- <div class="quicksort-para"></div> -->
+    <div class="circlesort"></div>
+    <div class="heapsort"></div>
+    <!-- <div class="cyclesort"></div> -->
 
     <!-- perform sort individually -->
     <!-- <script src="./JS/individual.js" defer type="module"></script>
